[tool.poetry]
name = "extract-chant"
version = "0.1.0"
description = "extract chant"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
